# simpleRAG

./: .gitignore  README.md  app.py  pyproject.toml  test.ipynb
data/: history_sample.md  sample_docs.txt
index_store/: chroma.sqlite3
src/simple_rag/: __init__.py  cli.py  config.py  data_module.py  index_module.py  mcp_server.py  rag.py  retrieve_module.py
